--- a/src/app/pages/products/view/products/products.component.html
+++ b/src/app/pages/products/view/products/products.component.html
@@ -1,1 +1,13 @@
-<p>products works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-subtitle>Products list</mat-card-subtitle>
+    <mat-card-title>Products</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    @for (product of items(); track product.id) {
+      <p>{{ product.name }}</p>
+    } @empty {
+      <p>No products found</p>
+    }
+  </mat-card-content>
+</mat-card>
